# XAI

./: .gitignore  .~lock.literature_review.xlsx#  alias.sh  clean.sh  idun.sh  log.txt  maze.txt  maze_dqn.pth.hyper  maze_model.pth  maze_parameters.json  model.pth  package-lock.json  parameters.json  pyproject.toml  q_table.npy  readme.md  requirements.txt  tag-v0_agent0_episode_0.pt  test_model.pth
assets/: .gitignore
data/: positive_samples.csv
data_handler/: __init__.py  __main__.py
demo/: __init__.py  __main__.py  main.py  network.py  settings.py
environments/: __init__.py  main.py  settings.py
gui/: .gitignore  __init__.py  __main__.py
gymnasium/: readme.md
history/: __init__.py
literature_review/: .~lock.literature_review.xlsx#  __init__.py  __main__.py  literature_review.xlsx  literature_review.xlsx.old  scopus.csv  scopus1.csv  settings.py
managers/: __init__.py
methods/: .gitignore  __init__.py  __main__.py
models/: __init__.py  __main__.py  tag-v0_agent0_episode_0.pt  tag-v0_agent0_episode_10.pt  tag-v0_agent0_episode_20.pt  tag-v0_agent0_episode_30.pt  tag-v0_agent0_episode_40.pt  tag-v0_agent0_episode_50.pt  tag-v0_agent0_episode_60.pt  tag-v0_agent0_episode_70.pt  tag-v0_agent0_episode_80.pt  tag-v0_agent0_episode_90.pt  tag-v0_agent1_episode_0.pt  tag-v0_agent1_episode_10.pt  tag-v0_agent1_episode_20.pt  tag-v0_agent1_episode_30.pt  tag-v0_agent1_episode_40.pt  tag-v0_agent1_episode_50.pt  tag-v0_agent1_episode_60.pt  tag-v0_agent1_episode_70.pt  tag-v0_agent1_episode_80.pt  tag-v0_agent1_episode_90.pt  tagv0_agent0_episode_0.pt
(+563 files in other folders)
