[tool.poetry]
name = "xai"
version = "0.1.0"
description = ""
authors = ["EirikReiestad <eirik@reiestad.no>"]
readme = "readme.md"
packages = [{ include = "demo" }]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.1"
torch = "^2.4.0"
gymnasium = "^0.29.1"
pygame = "^2.6.0"
numpy = "^2.0.1"
pylint = "^3.2.6"
ipython = "^8.26.0"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
