[tool.poetry]
name = "xai"
version = "0.1.0"
description = ""
authors = ["EirikReiestad <eirik@reiestad.no>"]
readme = "readme.md"
packages = [{ include = "demo" }]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.1"
torch = "^2.4.0"
gymnasium = "^0.29.1"
pygame = "^2.6.0"
numpy = ">=1.23.5,<2.0.0"
pylint = "^3.2.6"
ipython = "^8.26.0"
scipy = "^1.14.1"
wandb = "^0.18.1"
shap = "^0.46.0"
tensorflow = "^2.17.0"
memory-profiler = "^0.61.0"
opencv-python = "^4.10.0.84"
customtkinter = "^5.2.2"
seaborn = "^0.13.2"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
